# simplizer-initializing-promtheus-agents

./: Cargo.toml  Cross.toml  build.rs  install-agent.sh  release.sh
.cargo/: config
.github/workflows/: ci.yml  release.yml
docker/: docker-compose.yml
docker/linux-agent/: Dockerfile
lib/: process-cpu-agent-config.toml
scripts/: build-centos7-docker.sh  build-windows-docker.sh  install-linux.sh  install-windows.ps1  test-linux-docker.sh
src/: exports_downloader.rs  main.rs  node_exporter.rs  os_detector.rs  process_cpu_agent.rs  windows_exporter.rs
src/exporter/: downloader.rs  mod.rs  node_exporter.rs  process_exporter.rs  windows_exporter.rs
