[package]
name = "prometheus-agents-setup"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tar = "0.4"
flate2 = "1.0"
zip = "0.6"
