[package]
name = "prometheus-agents-setup"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
opt-level = "z"
strip = true
panic = "abort"
codegen-units = 1

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tar = "0.4"
flate2 = "1.0"
zip = "0.6"

[dev-dependencies]
tempfile = "3.8"
